syntax = "proto3";
option java_multiple_files = true;
package com.example.grpc.server.grpcserver.cashregister;

message ProtoCashRegister {
    string name = 1;
	int32 added_amount = 2;
}

message DeleteRequest {
	string cash_register_id = 1;
}

message DeleteResponse {
    string report = 1;
}

message GetRequest {
}

message GetResponse {
    repeated ProtoCashRegister cashregisters = 1;
}

message CreateRequest {
	ProtoCashRegister cashRegister = 1;
}

message CreateResponse {
    string id = 1;
}

service CashRegisterService {
    rpc get(GetRequest) returns (GetResponse);
    rpc delete(DeleteRequest) returns (DeleteResponse);
    rpc create(CreateRequest) returns (CreateResponse);
}



